k8s-backup/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studyroom-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studyroom-frontend
  template:
    metadata:
      labels:
        app: studyroom-frontend
    spec:
      containers:
        - name: frontend
          image: jungmin2/studyroom-frontend:latest
          ports:
            - containerPort: 80
